[project]
name = "research-agent"
version = "0.1.0"
description = "Async research agent orchestrating Google Gemini workflows with adaptive budgeting"
readme = "README.md"
license = { text = "Apache-2.0" }
classifiers = [
  "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.29.0",
    "httpx>=0.27.0",
    "ipykernel>=6.30.1",
    "pydantic-settings>=2.10.1",
]
